<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Mytest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Back">Back</string>
    <string name="Info">Info</string>
    <string name="userData">使用者資料</string>
    <string name="test2">test2</string>
    <string name="test3">test3</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string android:id="@+id/string1" name="textId" android:layout_width="wrap_content" android:layout_height="wrap_content">txt_listViewData</string>
    <string name="image_head">headImage</string>
    <string name="title_activity_user_data">UserData</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="userName">User Name</string>
    <string name="userPass">Password</string>
    <string name="login">Login</string>
    <string name="inputHint">請輸入使用者名稱</string>
    <string name="passHint">請輸入使用者密碼</string>
    <string name="logOut">登出</string>
    <string name="newSpace">建立相簿</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="couponDate">優惠期間:</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="openMap">開啟地圖</string>
    <string name="trafficOnOff">交通資訊</string>

</resources>
