<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="steven.example.mytest.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/image" />

    <EditText
        android:id="@+id/editT_userPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_login"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/passHint"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textv_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editT_userName"
        android:layout_alignParentLeft="true"
        android:text="@string/userName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="LoginOnClick"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textv_userPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editT_userPwd"
        android:layout_alignParentLeft="true"
        android:text="@string/userPass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editT_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textv_userPwd"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:hint="@string/inputHint"
        android:maxLines="1" >

        <requestFocus />
    </EditText>

    <ProgressBar
        android:id="@+id/progressBar_Login"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
